--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import 'tailwindcss';
+
+@font-face {
+    font-family: 'Pixel-Main';
+    src: url('./assets/Fonts/medodica.regular.otf');
+    font-weight: normal;
+    font-style: normal;
+}
