Design changed to glass aestehtic

--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,10 @@
   image-rendering: pixelated;
 }
 
+/* Firefox support */
+.scrollbar {
+  scrollbar-width: auto;
+  scrollbar-color: #696969 #1d1d1d00;
+}
 @import 'tailwindcss';
 
