Final initial version for Bio

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   image-rendering: pixelated; 
 }
 
+html{
+  scroll-behavior: smooth;  
+}
+
 @layer base {
   ::selection {
     background-color: #ffffff; 
